fixed issue with new games adding click handlers again and fixed some font sizing issues on smaller screens

--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ body{
     height:25%;
     border:2px double white;
     color:white;
-    font-size:1em;
+    font-size:0.7em;
     display:flex;
     justify-content:center;
     align-items:center;
@@ -190,7 +190,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size:2em;
+    font-size:1.8em;
 }
 .howToPlay{
     position:absolute;
@@ -327,7 +327,7 @@ body{
     background-size: 100% 100%;
     align-items:center;
     justify-content:center;
-    font-size:0.6em;
+    font-size:0.5em;
 }
 
 .horn{
@@ -716,12 +716,26 @@ body{
 }
 @media only screen and (min-width : 1595px) {
     .info{
-        font-size:1em;
+        font-size:0.9em;
     }
     .armor{
         font-size:2.5em;
     }
+    .hitPoints{
+        font-size:2.5em;
+    }
+}
+@media only screen and (max-width : 851px) {
+    .info{
+        font-size:0.4em;
+    }
     .horn{
+        font-size:1em;
+    }
+   .lotrDesc{
+       font-size:1em;
+   }
+    .armor{
         font-size:2.5em;
     }
     .hitPoints{
